# cargo-debmake

./: Cargo.toml
src/: main.rs
src/debmake/: filters.rs  helpers.rs  mod.rs
src/templates/: changelog  control  copyright  rules  watch
